--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,29 @@
-body {
+html, body {
   margin: 0;
+  padding: 0;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #282c34;
+  color: white;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+@font-face {
+  font-family: 'Gugi-Regular';
+  src: url(./assets/fonts/Gugi-Regular.ttf);
+}
+
+@font-face {
+  font-family: 'Monoton';
+  src: url(./assets/fonts/Monoton-Regular.ttf);
 }
