--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,7 @@
 .app-grid-row {
   height: 100vh;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  display: flex;
+  flex-direction: column;
 }
 
 @media (prefers-reduced-motion: no-preference) {
