--- a/client/src/components/Logo.module.css
+++ b/client/src/components/Logo.module.css
@@ -1,16 +1,40 @@
-.logo {
+.initBox {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;
-    height: 100%;
+    height: 60vh;
+    padding: 20vh 0;
 }
 
-.logo h1 {
+.logo {
     color: #484848;
     text-transform: uppercase;
     letter-spacing: 10px;
     animation: lightning 1.2s linear infinite;
-    font-family: 'Monoton';
+    font-family: 'Monoton' !important;
+}
+
+.loading {
+    color: #fff900;
+    letter-spacing: 2px;
+    font-family: 'NixieOne' !important;
+    text-shadow: 0 0 5px #fff900, 0 0 10px #ff6c00;
+}
+
+.loading span {
+    color: #484848;
+    text-shadow: none;
+    animation-timing-function: ease-in;
+    animation: loading 3s linear infinite;
+}
+
+.loading span:nth-child(1) {
+    animation-delay: 1s;
+}
+
+.loading span:nth-child(2) {
+    animation-delay: 2s;
 }
 
 @keyframes lightning {
@@ -27,5 +51,22 @@
     100% {
         color: #fff900;
         text-shadow: 0 0 7px #fff900, 0 0 50px #ff6c00;
+    }
+}
+
+@keyframes loading {
+    10% {
+        color: #fff900;
+        text-shadow: 0 0 7px #fff900, 0 0 50px #ff6c00;
+    }
+
+    20% {
+        color: #484848;
+        text-shadow: none;
+    }
+
+    100% {
+        color: #484848;
+        text-shadow: none;
     }
 }
