--- a/client/src/components/Menu.module.css
+++ b/client/src/components/Menu.module.css
@@ -1,8 +1,8 @@
 .menuItem {
-    color: #fff900;
+    color: #FFD70D;
     letter-spacing: 2px;
     font-family: 'NixieOne' !important;
-    text-shadow: 0 0 5px #fff900, 0 0 10px #ff6c00;
+    text-shadow: 0 0 5px #FFD70D, 0 0 10px #ff6c00;
     padding: 24px 0;
 }
 
