--- a/client/src/components/Categories.module.css
+++ b/client/src/components/Categories.module.css
@@ -1,39 +1,26 @@
 .block {
     width: 300px;
     height: 120px;
-    border: 1px solid #9EF0FF;
     border-radius: 8px;
     display: flex;
     align-items: flex-end;
     overflow: hidden;
+    justify-content: space-between;
     box-shadow:
-    0 0 0.1vw  0.4vw #D1FFFF,   
-    0 0 0.4vw  0.6vw #B8FFFF, 
-    0 0   4vw  0.4vw #9EF0FF,
-    inset 0 0 1.5vw  0.4vw #D1FFFF,
-    inset 0 0 0.4vw  0.2vw #B8FFFF,
-    inset 0 0 0.5vw  0.2vw #fff7f7;
+    0 0 1px  1px #D1FFFF,   
+    0 0 12px  1px #9EF0FF,
+    inset 0 0 12px  1px #D1FFFF,
+    inset 0 0 1px  1px #9EF0FF;
 }
 
-.block:after {
-    position: absolute;
-    top: 0;
-    left: 0;
-    content: '';
-    z-index: -1;
-    color: #9EF0FF;
-    filter: blur(15px);
-}
-
-.image {
-    height: 200%;
+.block svg {
+    transform: scale(0.5);
     align-self: center;
-    margin-top: 40px;
 }
 
 .blockCyan {
-    border-color: #9EF0FF;
-    color: #9EF0FF;
+    color: #D1FFFF;
+    text-shadow: 0 0 10px #9EF0FF;
 }
 
 .blockPurple {
